<resources>
    <string name="app_name">伍途</string>

    <string name="topbar_leftText">返回</string>

    <!--第三方登录-->
    <string name="qqLogin">QQ登录</string>
    <string name="wechatLogin">微信登录</string>
    <string name="sinaLogin">微博登录</string>
    <string name="goLogin"><i><u> → 手机号登录</u></i></string>

    <!--登录页面-->
    <string name="login_label">登录</string>
    <string name="login_input_userName">请输入手机号</string>
    <string name="login_input_pwd">请输入密码</string>
    <string name="login_btn_login">登录</string>
    <string name="login_btn_register">注册</string>
    <string name="login_tv_goFindPwd"><i><u>忘记密码?</u></i></string>
    <string name="login_tv_noPwdEnter"><i><u>游客进入</u></i></string>

    <!-- 注册 -->
    <string name="register_label">验证手机号</string>
    <string name="register_username">输入手机号</string>
    <string name="register_verifyCode">输入验证码</string>
    <string name="register_btn_verify">获取验证码</string>
    <string name="register_btn_next">下一步</string>
    <string name="register_pwd">设置密码</string>
    <string name="register_rePwd">再次输入密码</string>
    <string name="register_finish">注册完成</string>

    <!--密码找回-->
    <string name="register_pwd_label">设置密码</string>
    <string name="findPwd_username">手机号</string>
    <string name="findPwd_pwd">设置新密码</string>
    <string name="findPwd_finish">完成</string>

    <!--主页-->
    <string name="military_world">军事天地</string>
    <string name="time_manage">目标管理</string>
    <string name="my_center">个人中心</string>
    <string name="my_club">我的社团</string>

<<<<<<< HEAD
    <!-- 社团 -->
    <string name="society_name">我的社团</string>
    <string name="society_Activity">社团特色活动</string>
    <string name="society_hornor">社团荣誉墙</string>
    <string name="society_photo">社团图片墙</string>
    <string name="society_member">社团人员资料墙</string>
    <string name="society_task">社团任务大厅</string>
    <string name="society_train">社团培训大厅</string>
    <string name="society_myContribute">我的社团贡献</string>
    <string name="society_integral">积分兑换大厅</string>
    <string name="society_textLocation"><i>成都,成都理工大学,伍途社团。部长:XXX</i></string>


    <!--定位-->
    <string name="location_title">定位</string>
    <string name="location_city">定位城市</string>
    <string name="location_current_choose">当前：</string>


    <!--社团人员管理界面-->
    <string name="member_addNew"><i>点击添加新届人员</i></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--省份列表-->
    <string-array name="city_array">
        <item>北京市</item>
        <item>上海市</item>
        <item>天津市</item>
        <item>重庆市</item>
        <item>河北省</item>
        <item>河南省</item>
        <item>云南省</item>
        <item>辽宁省</item>
        <item>黑龙江省</item>
        <item>湖南省</item>
        <item>安徽省</item>
        <item>山东省</item>
        <item>新疆维吾尔</item>
        <item>江苏省</item>
        <item>浙江省</item>
        <item>江西省</item>
        <item>湖北省</item>
        <item>广西省</item>
        <item>甘肃省</item>
        <item>陕西省</item>
        <item>山西省</item>
        <item>内蒙古</item>
        <item>吉林省</item>
        <item>福建省</item>
        <item>贵州省</item>
        <item>广东省</item>
        <item>青海省</item>
        <item>西藏</item>
        <item>四川省</item>
        <item>宁夏省</item>
        <item>海南省</item>
        <item>台湾省</item>
        <item>香港特别行政区</item>
        <item>澳门特别行政区</item>

    </string-array>

=======
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
>>>>>>> 8c32f9c62c7fb63ddca42355733fa1fa02ec3c84
</resources>
