<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:maxLength="11"
            android:id="@+id/et_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/colorTranslate"
            android:gravity="center"
            android:hint="@string/login_input_userName"
            android:inputType="phone"/>

        <View
            android:id="@+id/line"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/et_userName"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"/>

        <RelativeLayout
            android:id="@+id/rr_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line">

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTranslate"
                android:gravity="center"
                android:hint="@string/login_input_pwd"
                android:inputType="textPassword"/>

            <CheckBox
                android:id="@+id/cb_login_showPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/colorTranslate"
                android:button="@drawable/et_pwd_selector"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rr_login"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_selector"
            android:text="@string/login_btn_login"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_goToFindPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/login_tv_goFindPwd"/>

    <TextView
        android:id="@+id/tv_goToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/login_tv_goRegister"/>


</RelativeLayout>
